--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@magic-ext/connect": "0.1.6",
+    "@magic-ext/oauth": "2.1.1",
+    "@magic-sdk/types": "7.1.1",
+    "magic-sdk": "8.1.1",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "web3": "1.7.4"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
